Fix winmo crasher introduced by GetMaxTotalHeapSize patch (bug 501318) (r+rreitmai)